edited hyperlink to homepage

--- a/templates/result.html
+++ b/templates/result.html
@@ -1307,7 +1307,7 @@
           <div id="download-button">
         
 
-            <a href="gotoHome" class="btn btn-outline-primary btn-lg">
+            <a href="/" class="btn btn-outline-primary btn-lg">
               RUN NEW DATA
             </a>
             
