--- a/templates/index.html
+++ b/templates/index.html
@@ -90,7 +90,7 @@
       </h1>
 
       <p id="Subtitle">
-        Machine Learning Based Inventory Management Simplified For You
+        Mathematical Algorithm Based Inventory Management Simplified For You
       </p>
 
 
@@ -136,7 +136,7 @@
             <img id="carousel-images" src="/static/Images/2.png" alt="">
             <p id="carousel-texts">
       
-              Our sophisticated <strong> ML algorithm and mathematical models  </strong>  analyse your data to <br>
+              Our sophisticated <strong> mathematical algorithm  </strong>  analyse your data to <br>
               determine the best optimized mode for you to stock your inventory. <br>
               Additionally, we keep you updated regarding your <strong>restocking needs </strong>  to keep up <br>
               with the market demands at all times of the year.
